fixed: add more swagger and refactor analysis
